[com_fields] Fix for cropped 'Show User Custom Field' (#14566)
* Fix input value cropping issue

* Include parent li

--- a/administrator/templates/isis/css/template-rtl.css
+++ b/administrator/templates/isis/css/template-rtl.css
@@ -7031,6 +7031,10 @@ h6 {
 	width: 100% !important;
 	max-width: 220px;
 }
+.control-group .chzn-container .chzn-choices li.search-field,
+.control-group .chzn-container .chzn-choices li.search-field input {
+	width: 100% !important;
+}
 .chzn-container-single .chzn-single {
 	background-color: #fff;
 	background-clip: inherit;
